# libmsdoc

./: .gitignore  Makefile  Makefile.in  README  configure  configure.in
man/: Makefile.in
php/: Makefile
src/: Makefile  Makefile.in  cref.h  crefit.h  crefset.h  cstring.h
src/base/: ccontent.cpp  ccontent.h  cdoc.h  content.cpp  content.h  docstream.h  exceldoc.cpp  exceldoc.h  irefcontainer.h  relationships.cpp  relationships.h
src/excel/: doc.cpp  doc.h
src/ext/: crefit.h  crefset.h  exception.h  initializer.h  iref.h  ref.h  refit.h  refset.h  string.h  zip.cpp  zip.h
src/ext/ref/: interface.h  iterator.h  iterator.inc  reference.h  refobj.h  refobj.inc  set.h  set.inc
src/spreadsheetml/: ct_col.h  ct_cols.h  ct_sheet.h  ct_sheets.h  ct_sheetview.h  ct_sheetviews.h  ct_workbook.h  ct_worksheet.h
src/st/: st_string.h
src/test/: test_excel.cpp  test_refset.cpp
